api/1.6.0/index.md
# API for 1.6.0 

* [Add-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Add-UDElement.md)
* [Clear-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Clear-UDElement.md)
* [Disable-UDLogging](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Disable-UDLogging.md)
* [Enable-UDLogging](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Enable-UDLogging.md)
* [Get-UDContentType](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDContentType.md)
* [Get-UDCookie](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDCookie.md)
* [Get-UDDashboard](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDDashboard.md)
* [Get-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDElement.md)
* [Get-UDLicense](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDLicense.md)
* [Get-UDRestApi](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDRestApi.md)
* [Get-UDTheme](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Get-UDTheme.md)
* [Grant-UDJsonWebToken](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Grant-UDJsonWebToken.md)
* [New-UDAuthenticationMethod](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDAuthenticationMethod.md)
* [New-UDAuthenticationResult](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDAuthenticationResult.md)
* [New-UDBarChartDataset](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDBarChartDataset.md)
* [New-UDBarChartOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDBarChartOptions.md)
* [New-UDButton](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDButton.md)
* [New-UDCard](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCard.md)
* [New-UDCategoryChartAxis](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCategoryChartAxis.md)
* [New-UDChart](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChart.md)
* [New-UDChartDataset](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChartDataset.md)
* [New-UDChartLayoutOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChartLayoutOptions.md)
* [New-UDChartLegendOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChartLegendOptions.md)
* [New-UDChartOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChartOptions.md)
* [New-UDChartTitleOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChartTitleOptions.md)
* [New-UDChartTooltipOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDChartTooltipOptions.md)
* [New-UDCheckbox](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCheckbox.md)
* [New-UDCollapsible](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCollapsible.md)
* [New-UDCollapsibleItem](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCollapsibleItem.md)
* [New-UDCollection](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCollection.md)
* [New-UDCollectionItem](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCollectionItem.md)
* [New-UDColumn](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDColumn.md)
* [New-UDCounter](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDCounter.md)
* [New-UDDashboard](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDDashboard.md)
* [New-UDDoughnutChartDataset](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDDoughnutChartDataset.md)
* [New-UDDoughnutChartOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDDoughnutChartOptions.md)
* [New-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDElement.md)
* [New-UDEndpoint](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDEndpoint.md)
* [New-UDEndpointSchedule](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDEndpointSchedule.md)
* [New-UDFooter](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDFooter.md)
* [New-UDGrid](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDGrid.md)
* [New-UDHeading](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDHeading.md)
* [New-UDHtml](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDHtml.md)
* [New-UDIcon](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDIcon.md)
* [New-UDIFrame](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDIFrame.md)
* [New-UDImage](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDImage.md)
* [New-UDInput](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDInput.md)
* [New-UDInputAction](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDInputAction.md)
* [New-UDInputField](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDInputField.md)
* [New-UDLayout](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLayout.md)
* [New-UDLinearChartAxis](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLinearChartAxis.md)
* [New-UDLineChartDataset](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLineChartDataset.md)
* [New-UDLineChartOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLineChartOptions.md)
* [New-UDLink](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLink.md)
* [New-UDLogarithmicChartAxis](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLogarithmicChartAxis.md)
* [New-UDLoginPage](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDLoginPage.md)
* [New-UDModal](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDModal.md)
* [New-UDMonitor](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDMonitor.md)
* [New-UDPage](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDPage.md)
* [New-UDParagraph](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDParagraph.md)
* [New-UDPolarChartDataset](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDPolarChartDataset.md)
* [New-UDPolarChartOptions](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDPolarChartOptions.md)
* [New-UDPreloader](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDPreloader.md)
* [New-UDRadarChartDataset](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDRadarChartDataset.md)
* [New-UDRadio](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDRadio.md)
* [New-UDRow](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDRow.md)
* [New-UDSelect](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDSelect.md)
* [New-UDSelectGroup](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDSelectGroup.md)
* [New-UDSelectOption](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDSelectOption.md)
* [New-UDSpan](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDSpan.md)
* [New-UDSwitch](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDSwitch.md)
* [New-UDTable](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDTable.md)
* [New-UDTextbox](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDTextbox.md)
* [New-UDTheme](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/New-UDTheme.md)
* [Out-UDChartData](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Out-UDChartData.md)
* [Out-UDGridData](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Out-UDGridData.md)
* [Out-UDMonitorData](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Out-UDMonitorData.md)
* [Out-UDTableData](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Out-UDTableData.md)
* [Remove-UDCookie](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Remove-UDCookie.md)
* [Remove-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Remove-UDElement.md)
* [Send-UDToast](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Send-UDToast.md)
* [Set-UDBackwardsCompatbility](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Set-UDBackwardsCompatbility.md)
* [Set-UDContentType](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Set-UDContentType.md)
* [Set-UDCookie](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Set-UDCookie.md)
* [Set-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Set-UDElement.md)
* [Set-UDLicense](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Set-UDLicense.md)
* [Start-UDDashboard](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Start-UDDashboard.md)
* [Start-UDRestApi](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Start-UDRestApi.md)
* [Stop-UDDashboard](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Stop-UDDashboard.md)
* [Stop-UDRestApi](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Stop-UDRestApi.md)
* [Sync-UDElement](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Sync-UDElement.md)
* [Update-UDDashboard](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Update-UDDashboard.md)
* [Write-UDLog](https://github.com/adamdriscoll/universal-dashboard-documentation/blob/master/api/1.6.0/Write-UDLog.md)
